Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53255

Windows: window decoration is not correct if the screens using different scale factor [Per monitor DPI aware applications]

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.9
    • 5.6.0
    • GUI: Window management
    • None
    • Windows 10, 2 screen setup
    • e8ecde99df8dc8959e1a5af679961cb946ccae69 (qtbase/dev, 23.11.2016, 5.9)

      I am using a high res laptop and an none high res attached screen, the scale factor at the laptop(primary screen) is 200% but for the attached screen it is 100%, but now the window decoration has not the correct size at the screen where I have the 100%.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            tjenssen Tim Jenssen
            Votes:
            2 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: